# processx-falls-management-checker

./: .env.example  .gitignore  LOOM_WALKTHROUGH.md  README.md  pyproject.toml  requirements.txt
data/raw/: Your_Output_File.xlsx  readme.md
docs/: architecture.md  assumptions.md  compliance-matrix.md  decision-log.md
prompts/: compliance_v1.txt  extraction_v1.txt
src/: main.py
src/ai/: device.py  health.py  llm_client.py  loader.py  model_registry.py  prompt_builder.py  rule_mapper.py
src/core/: constants.py  environment.py  exceptions.py  interfaces.py  models.py  startup.py
src/domain/: compliance_flag.py  policy_rule.py  resident_note.py
src/parsers/: docx_parser.py  excel_parser.py  policy_parser.py
src/services/: compliance_engine.py  excel_writer.py  note_analyzer.py  policy_extractor.py  validation_engine.py
src/utils/: file_utils.py  helpers.py  logger.py
tests/: conftest.py  test_ai_integration.py  test_compliance_engine.py  test_end_to_end.py  test_environment_and_health.py  test_excel_parser.py  test_policy_parser.py
